make some changes

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
                         </div>
                         <div class="card-footer business-card-footer d-flex align-items-center justify-content-around">
                             <p class="price-tag pt-3">$234</p>
-                            <button class="btn button-design d-block"><i class="fa fa-shopping-cart"></i><span class="p-2">BUY NOW</span></button>
+                            <button type="button" class="btn button-design"><i class="fa fa-shopping-cart"></i><span class="p-2">BUY
+                                    NOW</span></button>
                         </div>
                     </div>
                 </div>
@@ -91,7 +92,8 @@
                         </div>
                         <div class="card-footer business-card-footer d-flex align-items-center justify-content-around">
                             <p class="price-tag pt-3">$234</p>
-                            <button class="btn button-design"><i class="fa fa-shopping-cart"></i><span class="p-2">BUY NOW</span></button>
+                            <button type="button" class="btn button-design"><i class="fa fa-shopping-cart"></i><span class="p-2">BUY
+                                    NOW</span></button>
                         </div>
                     </div>
                 </div>
@@ -105,7 +107,8 @@
                         </div>
                         <div class="card-footer business-card-footer d-flex align-items-center justify-content-around">
                             <p class="price-tag pt-3">$234</p>
-                            <button class="btn button-design"><i class="fa fa-shopping-cart"></i><span class="p-2">BUY NOW</span></button>
+                            <button type="button" class="btn button-design"><i class="fa fa-shopping-cart"></i><span class="p-2">BUY
+                                    NOW</span></button>
                         </div>
                     </div>
                 </div>
@@ -127,7 +130,8 @@
                         </div>
                         <div class="card-footer business-card-footer d-flex align-items-center justify-content-around">
                             <p class="price-tag pt-3">$234</p>
-                            <button class="btn button-design"><i class="fa fa-shopping-cart"></i><span class="p-2">BUY NOW</span></button>
+                            <button type="button" class="btn button-design"><i class="fa fa-shopping-cart"></i><span class="p-2">BUY
+                                    NOW</span></button>
                         </div>
                     </div>
                 </div>
@@ -141,7 +145,8 @@
                         </div>
                         <div class="card-footer business-card-footer d-flex align-items-center justify-content-around">
                             <p class="price-tag pt-3">$234</p>
-                            <button class="btn button-design"><i class="fa fa-shopping-cart"></i><span class="p-2">BUY NOW</span></button>
+                            <button type="button" class="btn button-design"><i class="fa fa-shopping-cart"></i><span class="p-2">BUY
+                                    NOW</span></button>
                         </div>
                     </div>
                 </div>
@@ -155,7 +160,8 @@
                         </div>
                         <div class="card-footer business-card-footer d-flex align-items-center justify-content-around">
                             <p class="price-tag pt-3">$234</p>
-                            <button class="btn button-design"><i class="fa fa-shopping-cart"></i><span class="p-2">BUY NOW</span></button>
+                            <button type="button" class="btn button-design"><i class="fa fa-shopping-cart"></i><span class="p-2">BUY
+                                    NOW</span></button>
                         </div>
                     </div>
                 </div>
