--- a/index.html
+++ b/index.html
@@ -228,7 +228,28 @@
             </div>
         </section>
     </main>
+    <footer class="container mb-5">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card-footer">
+                    <div class="card-title text-center footer-text">
+                        <p>E-COMMERCE SITE</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, libero!</p>
+                        <p><u>Visit:</u></p>
+                        <div class="social-icons d-flex justify-content-center align-items-center">
+                            <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f" id="facebook"></i></a>
+                            <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter" id="twitter"></i></a>
+                            <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram" id="instagram"></i></a>
+                            <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube" id="youtube"></i></a>
+                        </div>
+                        <p class="copyright">&copy; Copyright by authority</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-------------------------------------- FOOTER_SECTION ----------------------->
     <script src="./js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 </html>
